fixed misaligned sidebar header info

--- a/components/global/global_header.scss
+++ b/components/global/global_header.scss
@@ -1,4 +1,4 @@
-@charset 'UTF-8';
+@charset "utf-8";
 
 // css feature flag: apply styling overrides to legacy layout when global header is enabled
 .feature-global-header {
@@ -38,6 +38,16 @@
         // adjust height of sidebar to account for GH
         #SidebarContainer {
             height: calc(100% - 40px);
+            .team__header .header__info {
+                display: flex;
+                padding: 0;justify-content: space-between;
+                align-items: center;
+                .sidebar-header-dropdown__icon {
+                    position: relative;
+                    top: unset;
+                    right: unset;
+                }
+            }
         }
 
         // use sidebar variables for lhs
